--- a/rust-learning-note.ipynb
+++ b/rust-learning-note.ipynb
@@ -18,13 +18,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 29,
    "id": "da8d92e2",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [],
    "source": [
-    "let     x:i8 = 1 ; //声明不可变变量\n",
-    "let mut y:i8 = 3 ; //声明可变变量"
+    "let x: i8 = 1; //声明不可变变量\n",
+    "let mut y: i8 = 3; //声明可变变量\n"
    ]
   },
   {
@@ -57,14 +61,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 30,
    "id": "7e37fb55",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [],
    "source": [
-    "let float1:f32 = 1.1;   //类型声明\n",
-    "let float2     = 2.2f32;//类型后缀声明\n",
-    "let float3     = 3.3;   //默认f64"
+    "let float1: f32 = 1.1; //类型声明\n",
+    "let float2 = 2.2f32; //类型后缀声明\n",
+    "let float3 = 3.3; //默认f64\n"
    ]
   },
   {
@@ -77,13 +85,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 31,
    "id": "cd664983",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [],
    "source": [
-    "let t:bool = true; //显式声明\n",
-    "let f      = false;//隐式声明"
+    "let t: bool = true; //显式声明\n",
+    "let f = false; //隐式声明\n"
    ]
   },
   {
@@ -100,18 +112,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 32,
    "id": "dc28c7d0",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [],
    "source": [
-    "\n",
     "//(1..5) //左闭右开 1~4\n",
     "//(1..=5)//闭区间   1~5\n",
     "//rev()方法 反转顺序\n",
     "//(1..5).rev();  // 4 3 2 1\n",
     "//sum()方法 求和\n",
-    "//(1..=5).sum(); // 15"
+    "//(1..=5).sum(); // 15\n"
    ]
   },
   {
@@ -134,7 +149,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "61665fc5",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [],
    "source": [
     "let tup: (i32, f64, u8) = (500, 6.4, 1);\n",
@@ -147,26 +166,30 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0f79f5a0",
+   "id": "2ac57d2e",
    "metadata": {},
    "source": [
     "### **数组 Array**\n",
     "\n",
     "使用“数组名[索引]”访问；\n",
     "\n",
-    "当你明确元素数量不需要改变时，数组会比**Vector（可变数组）**更有用"
+    "当你明确元素数量不需要改变时，数组会比 **Vector（可变数组）** 更有用"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 34,
    "id": "8ac741c7",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [],
    "source": [
-    "let arr:[i32;5] = [1, 2, 3, 4, 5];\n",
-    "let arr         = [1, 2, 3, 4, 5];//类型推断\n",
-    "let arr         = [1;5]; //等价于let arr = [1,1,1,1,1];"
+    "let arr: [i32; 5] = [1, 2, 3, 4, 5];\n",
+    "let arr = [1, 2, 3, 4, 5]; //类型推断\n",
+    "let arr = [1; 5]; //等价于let arr = [1,1,1,1,1];\n"
    ]
   },
   {
@@ -187,32 +210,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 35,
    "id": "6ea58454",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [],
    "source": [
     "//链表\n",
     "#[derive(Debug)]\n",
     "struct ListNode {\n",
-    "\tval:i32,\n",
-    "\tnext:Option<Box<ListNode>>\n",
+    "    val: i32,\n",
+    "    next: Option<Box<ListNode>>,\n",
     "}\n",
     "//next的类型是指向ListNode结构体本身的智能指针\n",
     "\n",
     "let list = ListNode {\n",
-    "        val: 114,\n",
-    "        next: None,\n",
-    "    };\n",
+    "    val: 114,\n",
+    "    next: None,\n",
+    "};\n",
     "let list2 = ListNode {\n",
-    "        val: 514,\n",
-    "        ..list\n",
-    "    };\n",
+    "    val: 514,\n",
+    "    ..list\n",
+    "};\n",
     "//结构体更新语法，未显式指定值的字段使用list实例相同字段的值\n",
     "\n",
     "//元组结构体\n",
-    "struct Color(i32,i32,i32);\n",
-    "let black = Color(0,0,0);\n"
+    "struct Color(i32, i32, i32);\n",
+    "let black = Color(0, 0, 0);\n"
    ]
   },
   {
@@ -231,34 +258,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 36,
    "id": "7f7c54d8",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [],
    "source": [
     "//无参数枚举类型\n",
     "#[derive(Debug)] //实现Debug trait\n",
     "enum ColorNoParam {\n",
-    "\tRed,\n",
-    "\tYellow,\n",
-    "\tBlue\n",
+    "    Red,\n",
+    "    Yellow,\n",
+    "    Blue,\n",
     "}\n",
     "\n",
-    "fn main(){\n",
-    "\tlet color_no_param = ColorNoPAram::Red;\n",
+    "fn main() {\n",
+    "    let color_no_param = ColorNoPAram::Red;\n",
     "}\n",
     "\n",
     "//带参数枚举类型\n",
     "#[derive(Debug)] //实现Debug trait\n",
     "enum ColorParam {\n",
-    "\tRed(String),\n",
-    "\tYellow(String),\n",
-    "\tBlue(String)\n",
+    "    Red(String),\n",
+    "    Yellow(String),\n",
+    "    Blue(String),\n",
     "}\n",
     "\n",
-    "fn main(){\n",
-    "\tprintln!(\"{:?}\",ColorParam::Blue(String::from(\"blue\")));//Blue(\"blue\")\n",
-    "}"
+    "fn main() {\n",
+    "    println!(\"{:?}\", ColorParam::Blue(String::from(\"blue\"))); //Blue(\"blue\")\n",
+    "}\n"
    ]
   },
   {
@@ -292,13 +323,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 37,
    "id": "0677f439",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [],
    "source": [
-    "let mut v: Vec<i32> = Vec::new();               //创建空Vec\n",
-    "let mut v: Vec<i32> = Vec::with_capacity(10);   //创建容量为10的Vec"
+    "let mut v: Vec<i32> = Vec::new(); //创建空Vec\n",
+    "let mut v: Vec<i32> = Vec::with_capacity(10); //创建容量为10的Vec\n"
    ]
   },
   {
@@ -316,9 +351,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 38,
    "id": "ffa7edd9",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [],
    "source": [
     "//使用vec!宏，在创建Vec的同时进行初始化，并根据初始值自动推断类型\n",
@@ -347,18 +386,22 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "2039f881",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [],
    "source": [
-    "let mut v:Vec<i32> = Vec::new(); //声明空Vec\n",
+    "let mut v: Vec<i32> = Vec::new(); //声明空Vec\n",
     "\n",
     "v.push(1); //添加元素\n",
     "v.push(2);\n",
     "v.push(3);\n",
-    "println!(\"{:?}\",v); //输出[1,2,3]\n",
+    "println!(\"{:?}\", v); //输出[1,2,3]\n",
     "\n",
-    "v[1]=5; //修改元素\n",
-    "println!(\"{:?}\",v); //输出[1,5,3]"
+    "v[1] = 5; //修改元素\n",
+    "println!(\"{:?}\", v); //输出[1,5,3]\n"
    ]
   },
   {
@@ -376,14 +419,18 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "2210d48d",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [],
    "source": [
-    "let mut v:Vec<i32> = Vec::with_capacity(10); //声明容量为10的Vec\n",
+    "let mut v: Vec<i32> = Vec::with_capacity(10); //声明容量为10的Vec\n",
     "v.push(1); //添加元素\n",
     "v.push(2);\n",
     "v.push(3);\n",
-    "println!(\"e:{:?}\",v.pop()); //弹出最后一个元素，输出Some(3)"
+    "println!(\"e:{:?}\", v.pop()); //弹出最后一个元素，输出Some(3)\n"
    ]
   },
   {
@@ -402,14 +449,18 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "a7a2a5fe",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [],
    "source": [
-    "let mut v:Vec<i32> = Vec::with_capacity(10); //声明容量为10的Vec\n",
+    "let mut v: Vec<i32> = Vec::with_capacity(10); //声明容量为10的Vec\n",
     "v.push(1); //添加元素\n",
     "v.push(2);\n",
     "v.push(3);\n",
-    "println!(\"e:{:?}\",v.remove(1)); //移除索引为1的元素，输出2"
+    "println!(\"e:{:?}\", v.remove(1)); //移除索引为1的元素，输出2\n"
    ]
   },
   {
@@ -424,27 +475,35 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "747ff516",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [],
    "source": [
     "let v = vec![1, 2, 3];\n",
     "\n",
     "println!(\"e:{}\", v[2]); //使用 实例名[索引] 访问元素\n",
     "\n",
-    "//println!(\"e:{}\", v[10]);//越界访问，panic"
+    "//println!(\"e:{}\", v[10]);//越界访问，panic\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "238cade2",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [],
    "source": [
     "let v = vec![1, 2, 3];\n",
     "println!(\"e:{:?}\", v.get(2)); //使用get方法访问元素 返回Some(3)\n",
     "\n",
-    "println!(\"e:{:?}\", v.get(10)); //越界访问，返回None"
+    "println!(\"e:{:?}\", v.get(10)); //越界访问，返回None\n"
    ]
   },
   {
@@ -459,7 +518,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "cf86c4b2",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [],
    "source": [
     "let v = vec![10, 20, 30];\n",
@@ -471,7 +534,7 @@
     "for i in &mut v {\n",
     "    *i += 50;\n",
     "    println!(\"{}\", i);\n",
-    "}"
+    "}\n"
    ]
   },
   {
@@ -488,14 +551,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 45,
    "id": "9c2ce8fc",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [],
    "source": [
     "use std::collections::VecDeque;\n",
-    "let mut v:VecDeque<i32> = VecDeque::new(); //创建空VecDeque\n",
-    "let mut v:VecDeque<i32> = VecDeque::with_capacity(10); //声明容量为10的VecDeque"
+    "let mut v: VecDeque<i32> = VecDeque::new(); //创建空VecDeque\n",
+    "let mut v: VecDeque<i32> = VecDeque::with_capacity(10); //声明容量为10的VecDeque\n"
    ]
   },
   {
@@ -510,35 +577,43 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "d93d54a6",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [],
    "source": [
     "use std::collections::VecDeque;\n",
     "let mut v: VecDeque<u32> = VecDeque::new(); //创建空VecDeque\n",
     "v.push_back(1); //尾部添加元素\n",
     "v.push_back(2);\n",
-    "v.push_back(3); \n",
+    "v.push_back(3);\n",
     "\n",
     "v.push_front(1); //头部添加元素\n",
     "v.push_front(2);\n",
     "v.push_front(3);\n",
-    "println!(\"{:?}\",v); //输出Deque([3, 2, 1, 1, 2, 3])\n",
+    "println!(\"{:?}\", v); //输出Deque([3, 2, 1, 1, 2, 3])\n",
     "\n",
-    "v[1]=5; //修改元素\n",
-    "println!(\"{:?}\",v); //输出Deque([3, 5, 1, 1, 2, 3])\n",
+    "v[1] = 5; //修改元素\n",
+    "println!(\"{:?}\", v); //输出Deque([3, 5, 1, 1, 2, 3])\n",
     "\n",
-    "println!(\"e:{:?}\",v.pop_back()); //弹出尾部元素，输出Some(3)\n",
-    "println!(\"e:{:?}\",v.pop_front()); //弹出头部元素，输出Some(3)\n",
+    "println!(\"e:{:?}\", v.pop_back()); //弹出尾部元素，输出Some(3)\n",
+    "println!(\"e:{:?}\", v.pop_front()); //弹出头部元素，输出Some(3)\n",
     "//[5, 1, 1, 2]\n",
-    "println!(\"e:{:?}\",v.remove(1).unwrap()); //移除索引为1的元素，返回Some(3)\n",
-    "println!(\"e:{:?}\",v.remove(10)); //移除索引为10的元素，越界，返回None\n"
+    "println!(\"e:{:?}\", v.remove(1).unwrap()); //移除索引为1的元素，返回Some(3)\n",
+    "println!(\"e:{:?}\", v.remove(10)); //移除索引为10的元素，越界，返回None\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "ed42b050",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [],
    "source": [
     "println!(\"e:{:?}\", v[2]); //使用get方法访问元素 返回2\n",
@@ -554,16 +629,142 @@
    "source": [
     "### 哈希表 Hashmap\n",
     "\n",
-    "某种字典"
+    "存储K-V值，所有的Key同类型，所有的Value同类型。不允许有重复的键。"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "60985b57",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "use std::collections::HashMap;\n",
+    "//创建Hashmap\n",
+    "let mut map: HashMap<&str, i32> = HashMap::new(); //创建空HashMap\n",
+    "let mut map: HashMap<&str, i32> = HashMap::with_capacity(10); //声明容量为10的HashMap\n",
+    "\n",
+    "//HashMap的修改\n",
+    "//使用insert方法插入（或更新）键值对\n",
+    "let zhangsan1 = map.insert(\"zhangsan\", 97); //如果值不存在，执行插入并返回None;若存在，更新值并返回Some(旧值)\n",
+    "map.insert(\"lisi\", 86);\n",
+    "\n",
+    "println!(\"{:?}\", zhangsan1);\n",
+    "println!(\"{:?}\", map);\n",
+    "\n",
+    "let zhangsan2 = map.insert(\"zhangsan\", 79);\n",
+    "println!(\"{:?}\", zhangsan2);\n",
+    "println!(\"{:?}\", map);\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "84bae1cb",
+   "metadata": {},
+   "source": [
+    "使用entry和or_insert方法检查键是否有对应值，没有对应值则插入键值对，若有则不做操作。\n",
+    "\n",
+    "entry(\"key\") -> Entry\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7e86881b",
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "//entry or_insert方法\n",
+    "use std::collections::HashMap;\n",
+    "//创建Hashmap\n",
+    "let mut map: HashMap<&str, i32> = HashMap::new(); //创建空HashMap\n",
+    "map.entry(\"zhangsan\").or_insert(97); //如果键不存在，插入键值对\n",
+    "map.entry(\"lisi\").or_insert(86);\n",
+    "println!(\"{:?}\", map);\n",
+    "\n",
+    "map.entry(\"zhangsan\").or_insert(79); //键存在，不做操作,返回已有键值对的值\n",
+    "println!(\"{:?}\", map);\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c00add90",
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "//迭代修改map元素\n",
+    "use std::collections::HashMap;\n",
+    "let mut map: HashMap<&str, i32> = HashMap::new(); //创建空HashMap\n",
+    "\n",
+    "map.insert(\"zhangsan\", 97);\n",
+    "map.insert(\"lisi\", 86);\n",
+    "map.insert(\"wangwu\", 55);\n",
+    "println!(\"{:?}\", map);\n",
+    "\n",
+    "for (_, val) in map.iter_mut() {\n",
+    "    *val += 2;\n",
+    "}\n",
+    "println!(\"{:?}\", map);\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "10b3747d",
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "//使用remove方法删除并返回指定的键值对\n",
+    "use std::collections::HashMap;\n",
+    "let mut map: HashMap<&str, i32> = HashMap::new(); //创建空HashMap\n",
+    "map.insert(\"zhangsan\", 97);\n",
+    "map.insert(\"lisi\", 86);\n",
+    "map.insert(\"wangwu\", 55);\n",
+    "println!(\"{:?}\", map);\n",
+    "let result = map.remove(\"wangwu\");\n",
+    "\n",
+    "println!(\"{:?}\", map);\n",
+    "println!(\"result:{:?}\", result); //删除键值对，返回值\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "73e254a3",
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "//访问键值对\n",
+    "use std::collections::HashMap;\n",
+    "let mut map: HashMap<&str, i32> = HashMap::new(); //创建空HashMap\n",
+    "map.insert(\"zhangsan\", 97);\n",
+    "println!(\"zhangsan:{}\", map[\"zhangsan\"]); //使用[]访问键值对\n",
+    "//println!(\"wangwu:{}\",map[\"wangwu\"]); //访问不存在的键，panic\n",
+    "\n",
+    "println!(\"[get]zhangsan:{:?}\", map.get(\"zhangsan\")); //使用get方法访问键值对\n",
+    "println!(\"[get]wangwu:{:?}\", map.get(\"wangwu\")); //使用get方法访问不存在的键，返回None\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -581,12 +782,158 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "371aba30",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [],
    "source": [
     "let s1 = \"Hello,Rust!\"; //字符串字面量\n",
-    "let str = String::from(\"Hello,Rust!\"); //String类型，字符串对象\n",
-    "let s2 = str.as_str(); //String类型转&str类型\n"
+    "{\n",
+    "    let str1 = String::from(\"Hello,Rust!\"); //String类型，字符串对象\n",
+    "    let s2 = str1.as_str(); //String类型转&str类型\n",
+    "    println!(\"{}\", s2);\n",
+    "} //s2离开作用域，自动释放内存\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "61fe71ef",
+   "metadata": {},
+   "source": [
+    "### 字符串的创建"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "1cd57b85",
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "//创建字符串\n",
+    "let mut s = String::new(); //创建空字符串对象\n",
+    "let s = String::from(\"Hello,Rust!\"); //根据指定的字符串字面量创建字符串对象\n",
+    "let str1 = \"Hello,Rust!\"; //字符串字面量\n",
+    "let s = str1.to_string(); //字符串字面量转String类型\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e8fe3f1b",
+   "metadata": {},
+   "source": [
+    "### 字符串的修改"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f117879b",
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "{\n",
+    "    let mut s = String::from(\"Hello,\"); //创建字符串对象\n",
+    "    s.push('R'); //追加字符\n",
+    "    s.push_str(\"ust!\"); //追加字符串\n",
+    "    println!(\"{}\", s); //输出Hello,Rust!\n",
+    "}\n",
+    "\n",
+    "{\n",
+    "    let mut s = String::from(\"Hello World!\"); //创建字符串对象\n",
+    "    s.insert(5, ','); //在索引5处插入字符\n",
+    "    s.insert_str(7, \"Rust \"); //在索引7处插入字符串\n",
+    "    println!(\"{}\", s); //输出Hello,Rust World!\n",
+    "}\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "使用 + 或 += 连接字符串"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "2553cb87",
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello,Rust World!\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "()"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "{\n",
+    "    let s1 = String::from(\"Hello\");\n",
+    "    let s2 = String::from(\",\");\n",
+    "    let s3 = String::from(\"Rust \");\n",
+    "    let s4 = \"World\";\n",
+    "\n",
+    "    //String类型不能出现在+右边，因此将其转换为字面量。&s2为&String类型(但连接时会自动解引用为&str)，s3.as_str()为&str类型\n",
+    "    let mut s = s1 + &s2 + s3.as_str() + s4; \n",
+    "    s += \"!\";\n",
+    "    println!(\"{}\", s); //输出Hello,Rust World!\n",
+    "}\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7e0ad1af",
+   "metadata": {},
+   "source": [
+    "使用format!连接字符串\n",
+    "\n",
+    "可用于String和&str类型"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1b0b8c52",
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "{\n",
+    "    let s1 = String::from(\"Hello\");\n",
+    "    let s2 = String::from(\"Rust\");\n",
+    "    let s3 = String::from(\"World\");\n",
+    "    \n",
+    "\n",
+    "}"
    ]
   }
  ],
@@ -605,7 +952,7 @@
    "codemirror_mode": "rust",
    "file_extension": ".rs",
    "mimetype": "text/rust",
-   "name": "rust",
+   "name": "Rust",
    "pygment_lexer": "rust",
    "version": ""
   }
