--- a/rust-learning-note.ipynb
+++ b/rust-learning-note.ipynb
@@ -866,32 +866,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "2553cb87",
    "metadata": {
     "vscode": {
      "languageId": "rust"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello,Rust World!\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "()"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "{\n",
     "    let s1 = String::from(\"Hello\");\n",
@@ -930,11 +912,59 @@
     "{\n",
     "    let s1 = String::from(\"Hello\");\n",
     "    let s2 = String::from(\"Rust\");\n",
-    "    let s3 = String::from(\"World\");\n",
-    "    \n",
-    "\n",
+    "    let s3 = \"World\";\n",
+    "    let s = format!(\"{},{} {}\", s1, s2, s3);\n",
+    "    println!(\"{}\", s); //输出Hello,Rust World \n",
     "}"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6e49c5d7",
+   "metadata": {},
+   "source": [
+    "使用replace和replacen方法替换字符串中的字串。replace替换所有匹配到的字串，replacen还要指定替换的次数。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ecef68f0",
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "{\n",
+    "    let s = String::from(\"aaabbbbccaadd\");\n",
+    "    let s1 = s.replace(\"aa\",\"77\");\n",
+    "    let s2 = s.replacen(\"aa\",\"77\",1);\n",
+    "    println!(\"{}\",s1); //输出77bbbbcc77dd\n",
+    "    println!(\"{}\",s2); //输出77bbbbccaadd\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a2a2f49a",
+   "metadata": {},
+   "source": [
+    "使用pop,remove,truncate和clear方法删除字符串中的字符"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "be88c956",
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
