--- a/rust-learning-note.ipynb
+++ b/rust-learning-note.ipynb
@@ -1094,7 +1094,333 @@
    "source": [
     "## 2.6 字面量和运算符\n",
     "\n",
-    "### 字面量"
+    "### 字面量\n",
+    "\n",
+    "字面量是指由文字、数字或符号构成的值，它只能作为等号右边的值出现。比如整数1、浮点数1.2、字符'a'、字符串\"abc\"、布尔值true和单元值()都是字面量。 \n",
+    "\n",
+    "\n",
+    " 通过在字面量后面加类型后缀可以进行类型说明，比如1u8是使用u8后缀来表明字面量是一个8位无符号整数，1.2f32是使用f32后缀来表明字面量是一个32位的浮点数。 \n",
+    "\n",
+    " \n",
+    " 这里简要介绍一下单元类型。单元类型的值叫作单元值，以“()”表示。一个函数无返回值，实际上是以单元值作为函数的返回值了。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "89aa6903",
+   "metadata": {},
+   "source": [
+    "### 运算符\n",
+    "\n",
+    "Rust语言支持算术运算符、关系运算符、逻辑运算符、位运算符4种运算符\n",
+    "\n",
+    "Rust不支持自增运算符“++”和自减运算符“--”。\n",
+    "\n",
+    "## 本章小结\n",
+    "\n",
+    "本章介绍了如何声明变量以及使用变量，针对Rust中变量默认是不可变的，要想修改变量的值必须在声明变量时使用mut关键字，对这一特殊处理做了重点介绍和代码演示；还介绍了如何使用整数、浮点数、布尔值、字符等基本数据类型，以及元组、数组、结构体、枚举等复合数据类型。另外，本章还对Rust中的字面量以及常用的算术运算符、关系运算符、逻辑运算符和位运算符，进行了介绍。\n",
+    "\n",
+    "  关于容器类型，本章重点介绍了Vec、VecDeque和HashMap这3个类型，使读者了解了Vec和VecDeque的区别，以及如何增删改查其中的元素。特别要注意，避免操作元素时索引越界而导致程序错误。\n",
+    "\n",
+    "  字符串是程序开发中最常用的数据结构。本章重点介绍了字符串类型&str和String的创建，以及如何按字节处理和按字符处理两种方式操作String类型字符串。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b23fce38",
+   "metadata": {},
+   "source": [
+    "# 3 流程控制\n",
+    "## 3.1 条件判断\n",
+    "略\n",
+    "## 3.2 循环\n",
+    "Rust中有3种循环。\n",
+    "\n",
+    "  1）loop：重复执行、永远不会结束的循环。\n",
+    "\n",
+    "  2）while：在条件表达式的值为true时永远执行的循环。\n",
+    "\n",
+    "  3）for：重复执行指定次数的循环。\n",
+    "### loop"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "371c0282",
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "{\n",
+    "    let mut count = 0;\n",
+    "    //counter用来存放loop循环的返回值\n",
+    "    let counter = loop {\n",
+    "        count += 1;\n",
+    "        let counter = count * 2;\n",
+    "        println!(\"count: {}, counter: {}\", count, counter);\n",
+    "\n",
+    "        if count == 10 {\n",
+    "            break counter;\n",
+    "            \n",
+    "        }\n",
+    "    };\n",
+    "}\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "badd31e5",
+   "metadata": {},
+   "source": [
+    "### 3.2.2 while循环\n",
+    "\n",
+    "比loop简洁"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2febd1d0",
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "{\n",
+    "    let mut count = 0;\n",
+    "    let mut counter = 0;\n",
+    "    while count != 10 {\n",
+    "        count += 1;\n",
+    "        counter = count * 2;\n",
+    "        println!(\"count: {}, counter: {}\", count, counter);\n",
+    "    }\n",
+    "}\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ebf46ba6",
+   "metadata": {},
+   "source": [
+    "### 3.2.3 for循环\n",
+    "\n",
+    "  for循环使用“for…in…”的语法格式，是一种重复执行指定次数的循环。因其安全性和简洁性常用于对范围类型或集合类型的所有元素执行指定的操作。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "702e7ade",
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "{\n",
+    "    let mut counter = 0;\n",
+    "    for count in 1..=10 {\n",
+    "        counter = count * 2;\n",
+    "        println!(\"count: {}, counter: {}\", count, counter);\n",
+    "    }\n",
+    "}\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a3de3c97",
+   "metadata": {},
+   "source": [
+    "### continue and break\n",
+    "\n",
+    "用于循环控制\n",
+    "\n",
+    "continue语句仅是跳出当前轮循环，不再执行循环体内continue语句之后的代码，但它会再次进行条件判断，决定是否重复执行循环。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "29906cb0",
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "{\n",
+    "    for i in 0..10 {\n",
+    "        if i == 0 || i == 4 {\n",
+    "            continue;\n",
+    "        }\n",
+    "        if i == 6 {\n",
+    "            break;\n",
+    "        }\n",
+    "\n",
+    "        println!(\"i: {}\", i);\n",
+    "    }\n",
+    "}\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "10baa7a0",
+   "metadata": {},
+   "source": [
+    "## 3.3 match模式匹配\n",
+    "\n",
+    "match模式匹配也可用于流程控制，检查当前值是否匹配一系列模式中的某一个。模式可由字面值、变量、通配符和其他内容构成。每一个模式都是一个分支，程序根据匹配的模式执行相应的代码。\n",
+    "\n",
+    "Rust要求match模式匹配是穷尽式的，即**必须穷举所有的可能性**，否则会导致程序错误。有一个处理方法是将通配符\"\\_\"放置在其他分支之后，通配符\"_\"会匹配上面没有指定的所有可能的模式。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3fc31a3c",
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "{\n",
+    "    let age = 114514;\n",
+    "\n",
+    "    match age {\n",
+    "        0 => println!(\"You are a baby.\"),\n",
+    "        1..=2 => println!(\"You are a toddler.\"),\n",
+    "        3..=4 => println!(\"You are a preschooler.\"),\n",
+    "        5..=9 => println!(\"You are a schoolchild.\"),\n",
+    "        10..=11 => println!(\"You are a preteen.\"),\n",
+    "        12..=17 => println!(\"You are a teenager.\"),\n",
+    "        18..=100 => println!(\"You are an adult.\"),\n",
+    "        _ => (),\n",
+    "    }\n",
+    "}\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a7b8917b",
+   "metadata": {},
+   "source": [
+    "## 3.4 if let 和 while let模式匹配\n",
+    "\n",
+    "Rust提供了if let和while let模式匹配，在某些场景中可替代match模式匹配来简化代码。\n",
+    "\n",
+    "match_value函数仅要求对Some(7)进行匹配操作，并不要求处理其他情况，但是为了满足match模式穷尽匹配的要求，必须在处理Some(7)分支后加上“=> ()”分支。if_let_value函数使用if let简化了这一处理逻辑。if let后紧跟的表达式中，左侧为匹配模式，右侧为要匹配的值，两者通过等号分隔开。这里左侧的匹配模式对应match的一个分支，可以将if let视为match的语法糖，仅当匹配某一模式时执行代码，并忽略其他所有模式。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "066e5a76",
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "//if let vs match\n",
+    "{\n",
+    "    fn match_value(value: Option<i32>) {\n",
+    "        match value {\n",
+    "            Some(7) => println!(\"seven\"),\n",
+    "            _ => (),\n",
+    "        }\n",
+    "    }\n",
+    "\n",
+    "    fn if_let_value(value: Option<i32>) {\n",
+    "        if let Some(7) = value {\n",
+    "            println!(\"seven\");\n",
+    "        }\n",
+    "    }\n",
+    "}\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5b8e6b4a",
+   "metadata": {},
+   "source": [
+    "match_vec函数通过loop循环遍历动态数组vec，将元素依次取出并打印。pop方法返回Option类型，因此使用match模式匹配，Some(value)匹配vec中的元素，None匹配vec被取空的情况。while_let_vec函数使用while let简化了这一处理逻辑。while let后紧跟的表达式中，左侧为匹配模式，右侧为要匹配的值，两者通过等号分隔开。当vec中的元素被取空时，while循环会自动退出。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c5e15a67",
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "//while let vs loop match\n",
+    "{\n",
+    "    fn match_vec() {\n",
+    "        let mut vec = vec![1, 2, 3, 4, 5];\n",
+    "        loop {\n",
+    "            match vec.pop() {\n",
+    "                Some(value) => println!(\"{}\", value),\n",
+    "                None => {\n",
+    "                    break;\n",
+    "                }\n",
+    "            }\n",
+    "        }\n",
+    "    }\n",
+    "\n",
+    "    fn while_let_vec() {\n",
+    "        let mut vec = vec![1, 2, 3, 4, 5];\n",
+    "        while let Some(value) = vec.pop() {\n",
+    "            println!(\"{}\", value);\n",
+    "        }\n",
+    "    }\n",
+    "}\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "27c312eb",
+   "metadata": {},
+   "source": [
+    "## 小结\n",
+    "本章介绍了使用条件判断和循环对代码进行流程控制，其中条件判断包括if、if-else和if-else if-else，循环包括loop、while和for；然后介绍了使用continue语句和break语句控制循环流程；最后介绍了match模式匹配的应用，以及在某些场景中使用if let和while let模式匹配替代match模式匹配来简化代码。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8a4eca28",
+   "metadata": {},
+   "source": [
+    "# 4 函数、闭包与迭代器\n",
+    "\n",
+    "函数之所以普遍且重要是因为操作系统进程执行模型大多是基于“栈”的，编译器只需处理好函数的参数和返回值就能让其在栈上运行。\n",
+    "\n",
+    "函数作为一等公民，本身就是一种类型。\n",
+    "函数类型变量可以作为其他函数的参数或返回值，也可以赋值给别的变量，还可以直接调用执行。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7f62c89c",
+   "metadata": {},
+   "source": [
+    "## 4.1 函数\n",
+    "\n",
+    "### 4.1.1 定义函数"
    ]
   }
  ],
