--- a/rust-learning-note.ipynb
+++ b/rust-learning-note.ipynb
@@ -1420,7 +1420,86 @@
    "source": [
     "## 4.1 函数\n",
     "\n",
-    "### 4.1.1 定义函数"
+    "### 4.1.1 定义函数\n",
+    "\n",
+    "\n",
+    "函数名建议使用snake case规范风格，所有字母都是小写并使用下划线分隔单词\n",
+    "\n",
+    "返回值类型也不是必需的，如果函数需要返回某个值，应在函数签名中指定返回值类型"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "f78e44a1",
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5+4=9\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "()"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "{\n",
+    "    fn add(x: i32, y: i32) -> i32 {\n",
+    "        x + y\n",
+    "    }\n",
+    "    //fn main()\n",
+    "    {\n",
+    "        let x = 5;\n",
+    "        let y = {\n",
+    "            let x = 3;\n",
+    "            x + 1\n",
+    "        };\n",
+    "\n",
+    "        let sum = add(x, y);\n",
+    "        println!(\"{}+{}={}\", x, y, sum);\n",
+    "    }\n",
+    "}\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9073482c",
+   "metadata": {},
+   "source": [
+    "1. main函数是程序的入口点。对于二进制可执行文件来说，main函数是必不可少的。对于库函数来说，main函数不是必需的。\n",
+    "\n",
+    "2. 第8～11行代码赋值语句的右侧是一个代码块，它的返回值是3，这个值与变量y绑定。需要注意的是，第10行代码中“x+1”的结尾没有分号，代表这是一个表达式而非语句，将会自动返回表达式的值。\n",
+    "\n",
+    "3. Rust要求函数参数必须明确指定数据类型，但不能指定默认值。函数参数分为可变和不可变参数，默认是不可变参数。当需要可变操作时，可以使用mut关键字。函数如果有多个参数，可以使用逗号分隔。\n",
+    "\n",
+    "4. 函数只能有唯一的返回值，如果需要返回多个值，可以使用元组类型。Rust中每个函数都有返回值，即使是没有显式返回值的函数，也会隐式地返回一个单元值().\n",
+    "> 大部分情况下，函数隐式地返回函数体最后一个表达式的值。add函数体中最后一个表达式“x+y”的值将默认视为函数的返回值，即第2行代码“x+y”等同于“return x+y;”。但是，对于流程控制结构中的循环或条件判断分支，如果需要提前退出函数并返回指定的值，必须显式地使用return语句来返回\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3dd030cc",
+   "metadata": {},
+   "source": [
+    "### 4.1.2 方法和函数\n",
+    "方法来自面向对象的编程范式，它表示某个类型实例的行为，使用fn关键字定义.\n",
+    "\n",
+    "结构体的方法定义在impl块中。需要注意的是，定义在impl块中的不一定是方法，有可能是关联函数。方法要求第一个参数必须是self，它代表调用该方法的结构体实例。在方法中使用&self能够读取实例中的数据，使用&mut self能够向实例中写入数据。使用方法替代函数的最大好处在于组织性，应该将结构体实例所有的行为都一起放入impl块中。\n"
    ]
   }
  ],
