--- a/rust-learning-note.ipynb
+++ b/rust-learning-note.ipynb
@@ -1430,32 +1430,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "f78e44a1",
    "metadata": {
     "vscode": {
      "languageId": "rust"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "5+4=9\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "()"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "{\n",
     "    fn add(x: i32, y: i32) -> i32 {\n",
@@ -1499,8 +1481,378 @@
     "### 4.1.2 方法和函数\n",
     "方法来自面向对象的编程范式，它表示某个类型实例的行为，使用fn关键字定义.\n",
     "\n",
-    "结构体的方法定义在impl块中。需要注意的是，定义在impl块中的不一定是方法，有可能是关联函数。方法要求第一个参数必须是self，它代表调用该方法的结构体实例。在方法中使用&self能够读取实例中的数据，使用&mut self能够向实例中写入数据。使用方法替代函数的最大好处在于组织性，应该将结构体实例所有的行为都一起放入impl块中。\n"
+    "结构体的方法定义在impl块中。需要注意的是，定义在impl块中的不一定是方法，有可能是关联函数。方法要求第一个参数必须是self，它代表调用该方法的结构体实例。在方法中使用&self能够读取实例中的数据，使用&mut self能够向实例中写入数据。使用方法替代函数的最大好处在于组织性，应该将结构体实例所有的行为都一起放入impl块中。\n",
+    "\n",
+    "关联函数是指在impl块中定义，但又不以self作为参数的函数。它与结构体相关联，但不直接作用于结构体实例，常用作返回一个结构体实例的构造函数。\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dc029613",
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "{\n",
+    "    #[derive(Debug, PartialEq)]\n",
+    "    pub struct Student {\n",
+    "        name: &'static str,\n",
+    "        score: i32,\n",
+    "    }\n",
+    "\n",
+    "    impl Student {\n",
+    "        pub fn new(name: &'static str, score: i32) -> Self {\n",
+    "            Student { name, score }\n",
+    "        }\n",
+    "\n",
+    "        pub fn get_name(&self) -> &str {\n",
+    "            self.name\n",
+    "        }\n",
+    "\n",
+    "        pub fn set_name(&mut self, name: &'static str) {\n",
+    "            self.name = name;\n",
+    "        }\n",
+    "\n",
+    "        pub fn get_score(&self) -> i32 {\n",
+    "            self.score\n",
+    "        }\n",
+    "\n",
+    "        pub fn set_score(&mut self, score: i32) {\n",
+    "            self.score = score;\n",
+    "        }\n",
+    "    }\n",
+    "    //fn main()\n",
+    "    {\n",
+    "        let mut student: Student = Student::new(\"zhangsan\", 59);\n",
+    "        println!(\"name: {}, score: {}\", student.get_name(), student.get_score());\n",
+    "\n",
+    "        student.set_score(60);\n",
+    "        println!(\"{:?}\", student);\n",
+    "    }\n",
+    "}\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a1ff5760",
+   "metadata": {},
+   "source": [
+    "### 4.1.3 高阶函数\n",
+    "高阶函数是指以函数为参数或返回值的函数，是函数式编程语言最基础的特性。\n",
+    "函数是一种类型，函数类型的变量可以像其他类型的变量一样使用，既可以被直接调用执行，也可以作为其他函数的参数或返回值。\n",
+    "实现这一切的基础是函数指针，函数指针类型使用fn()来指定。\n",
+    "1. 函数指针\n",
+    "\n",
+    "函数指针是指向函数的指针，其值是函数的地址。\n",
+    "\n",
+    "必须显式指定函数指针类型fn()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "65c7ef5f",
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "{\n",
+    "    fn hello() {\n",
+    "        println!(\"hello function pointer!\");\n",
+    "    }\n",
+    "\n",
+    "    //fn main()\n",
+    "    {\n",
+    "        let fn_ptr: fn() = hello;//等号右侧使用的是函数名hello，而不是hello()，因为hello()是函数调用，返回值是()，而fn()是函数指针类型\n",
+    "        println!(\"{:p}\", fn_ptr);\n",
+    "        let other_fn = hello;\n",
+    "        //println!(\"{:p}\", other_fn);\n",
+    "        fn_ptr();\n",
+    "        other_fn();\n",
+    "    }\n",
+    "}\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0c4cd5b5",
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "source": [
+    "2. 函数作参数\n",
+    "\n",
+    "函数作为参数时，为了提升代码可读性，可以使用type关键字为函数指针类型定义别名。\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0744cfae",
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "{\n",
+    "    //使用type关键字为函数指针类型fn(i32, i32) -> i32定义了别名MathOp\n",
+    "    type MathOp = fn(i32, i32) -> i32;\n",
+    "    fn math(op: MathOp, x: i32, y: i32) -> i32 {\n",
+    "        println!(\"{:p}\", op);\n",
+    "        op(x, y)\n",
+    "    }\n",
+    "\n",
+    "    fn add(x: i32, y: i32) -> i32 {\n",
+    "        x + y\n",
+    "    }\n",
+    "\n",
+    "    fn subtract(x: i32, y: i32) -> i32 {\n",
+    "        x - y\n",
+    "    }\n",
+    "\n",
+    "    //fn main()\n",
+    "    //调用math函数，并传入add或subtract函数作为实参，它们会自动转换成函数指针类型\n",
+    "    {\n",
+    "        let (x, y) = (8, 3);\n",
+    "        println!(\"add operation result: {}\", math(add, x, y));\n",
+    "        println!(\"subtraction operation result: {}\", math(subtract, x, y));\n",
+    "    }\n",
+    "}\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "21692c55",
+   "metadata": {},
+   "source": [
+    "3. 函数作返回值\n",
+    "\n",
+    "函数作为返回值时，也可以使用type关键字为函数指针类型定义别名"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ce8b7f85",
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "{\n",
+    "    //math_op函数的返回值是函数指针类型，函数体中使用match模式匹配，\n",
+    "    //如果字符串字面量是“add”则返回add函数，否则返回subtract函数。\n",
+    "    type MathOp = fn(i32, i32) -> i32;\n",
+    "    fn math_op(op: &str) -> MathOp {\n",
+    "        match op {\n",
+    "            \"add\" => add,\n",
+    "            _ => subtract,\n",
+    "        }\n",
+    "    }\n",
+    "\n",
+    "    fn add(x: i32, y: i32) -> i32 {\n",
+    "        x + y\n",
+    "    }\n",
+    "\n",
+    "    fn subtract(x: i32, y: i32) -> i32 {\n",
+    "        x - y\n",
+    "    }\n",
+    "\n",
+    "    //fn main()\n",
+    "    {\n",
+    "        let (x, y) = (8, 3);\n",
+    "\n",
+    "        let mut op = math_op(\"add\");\n",
+    "        println!(\"operation result: {}\", op(x, y));\n",
+    "\n",
+    "        op = math_op(\"divide\");\n",
+    "        println!(\"operation result: {}\", op(x, y));\n",
+    "    }\n",
+    "}\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5bb19c00",
+   "metadata": {},
+   "source": [
+    "## 4.2 闭包\n",
+    "\n",
+    "闭包是在一个函数内创建的匿名函数，虽然没有函数名，但可以将闭包赋值给一个变量，通过调用该变量完成闭包的调用。对于只使用一次的函数，使用闭包是最佳的替代方案。此外，闭包可以访问外层函数中的变量，即闭包是一个可以捕获外部环境变量的函数。外部环境变量是指闭包定义时所在的作用域中的变量，而非在闭包内定义的变量。\n",
+    "\n",
+    "### 4.2.1 基本语法 \n",
+    "\n",
+    "闭包由管道符“||”和大括号“{}”组合而成。\n",
+    "\n",
+    "管道符中指定闭包的参数，如果有多个参数，使用逗号分隔。闭包的参数类型可以省略。\n",
+    "管道符后可以指定返回值类型，但不是必需的。大括号即闭包体，用来存放执行语句。如果闭包体只有一行，大括号也可以省略。闭包体中最后一个表达式的值默认为闭包的返回值。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d094a6ac",
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "{\n",
+    "    let add_one = |x: u32| -> u32 { x + 1 };\n",
+    "    //let add_one = |x| x + 1;\n",
+    "    println!(\"{}\", add_one(1));\n",
+    "}\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d57a72cd",
+   "metadata": {},
+   "source": [
+    "### 4.2.2　类型推断\n",
+    "\n",
+    "  闭包并不像函数那样严格要求为参数和返回值注明类型，这是因为闭包通常只应用于相对较小的场景上下文，编译器能可靠地推断参数和返回值的类型。\n",
+    "  > 虽然编译器会为每个参数和返回值推断出一个具体的类型，但是如果多次调用同一闭包却传递不同类型的参数将会导致类型错误。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "01fb2499",
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "{\n",
+    "    //下面是对具有相同行为的函数与闭包的纵向对比\n",
+    "    fn add_one_v1(x: u32) -> u32 {\n",
+    "        x + 1\n",
+    "    }\n",
+    "    let add_one_v2 = |x: u32| -> u32 { x + 1 };\n",
+    "    let add_one_v3 = |x| { x + 1 };\n",
+    "    let add_one_v4 = |x| x + 1;\n",
+    "}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0b179454",
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "()"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "{   //多次调用同一闭包却传递不同类型的参数导致错误\n",
+    "    let add_one_v4 = |x| x + 1;\n",
+    "    let i = add_one_v4(1);//i32\n",
+    "    //let f = add_one_v4(1.1);//f64\n",
+    "}\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b8a3bc0c",
+   "metadata": {},
+   "source": [
+    "### 4.2.3　捕获环境变量\n",
+    "\n",
+    "闭包和函数的最大区别是，闭包可以捕获和使用其被定义时所在的作用域中的变量。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "7fa8f042",
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "add result: 8\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "()"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "//fn main()\n",
+    "{\n",
+    "    let i = 1;\n",
+    "    let add = |x| { x + i };//捕获外部变量i\n",
+    "\n",
+    "    println!(\"add result: {}\", add(7));\n",
+    "}\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "275fb379",
+   "metadata": {},
+   "source": [
+    "## 4.3　迭代器\n",
+    "之前使用过for循环来遍历数据集合，并对每个元素执行指定的操作，但这一过程必须使用一个变量记录数据集合中每一次访问的位置。对于这种场景，推荐使用迭代器模式来遍历数据集合。\n",
+    "\n",
+    "迭代器模式是将遍历数据集合的行为抽象为单独的迭代对象，这样在遍历集合时可以把集合中所有元素按顺序传递给处理逻辑。\n",
+    "  \n",
+    "使用迭代器可以极大地简化数据操作，本节会介绍Rust中的迭代器模式，以及与迭代器配合使用的消费器和适配器。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a9ea9a89",
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
